--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -159,10 +159,11 @@ CurrentPosGridSize=0
 SnapScaleEnabled=False
 CurrentRotGridSize=0
 CurrentScalingGridSize=4
+GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/firstfloor
-MRUItem1=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/firstfloor
 MRUItem2=/Game/Attic
 MRUItem3=/Game/stairwellblock3
 MRUItem4=/Game/abandonedroom_V2
@@ -173,6 +174,7 @@ MRUItem7=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -318,7 +320,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Charlotte/Assets/Shield
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Chandelier
 ContentBrowserTab1.SelectedPaths=/Game/Neglect/M3/charassets
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/wardrobe
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 None=======
 None=======
 None=======
@@ -425,7 +427,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
-LastLevel=/Game/firstfloor
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -442,7 +444,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 GeneralProjectSettings="\"Object\" "
@@ -554,7 +556,7 @@ PrimitiveComponent="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionTextureSample="\"Object\" "
@@ -573,7 +575,7 @@ MaterialExpressionMultiply="\"Object\" "
 FbxImportUI="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1963,7 +1965,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -1991,26 +1993,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/firstfloor
-MRUItem1=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst_Inst
-MRUItem2=/Game/Assets/Amy/Asset/wardrobe/cabinet_low_lambert1_OcclusionRoughnessMetallic
-MRUItem3=/Game/Assets/Amy/Asset/wardrobe/wardrobe
-MRUItem4=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven
-MRUItem5=/Game/Living_Room
-MRUItem6=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
-MRUItem7=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
-MRUItem8=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem9=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
-MRUItem10=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem11=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
-MRUItem12=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
-MRUItem13=/Game/Attic
-MRUItem14=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
-MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
-MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
-MRUItem17=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
-MRUItem18=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
-MRUItem19=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst_Inst
+MRUItem0=/Game/Group_Assets/Aziz/Assets/SM_Bulb
+MRUItem1=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/firstfloor
+MRUItem4=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst_Inst
+MRUItem5=/Game/Assets/Amy/Asset/wardrobe/cabinet_low_lambert1_OcclusionRoughnessMetallic
+MRUItem6=/Game/Assets/Amy/Asset/wardrobe/wardrobe
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
+MRUItem9=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem10=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
+MRUItem11=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem12=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
+MRUItem13=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
+MRUItem14=/Game/Attic
+MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
+MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
+MRUItem17=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
+MRUItem18=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
+MRUItem19=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2062,6 +2064,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SM_Bulb.SM_Bulb;
 RecentlyPlaced=/Game/MSPresets/M_MS_Glass_Material/M_MS_Glass_Material.M_MS_Glass_Material;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/Glass.Glass;
 RecentlyPlaced=/Game/Group_Materials/Glass/Glass_Inst.Glass_Inst;
@@ -2081,7 +2084,6 @@ RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets_Door_Window_01_SM_Window_01_low.G_ModularAssets_Door_Window_01_SM_Window_01_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SM_WindowFrame.SM_WindowFrame;
 RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/windows/windowframe.windowframe;
-RecentlyPlaced=/Game/Assets/Amy/Asset/wardrobe/wardrobe.wardrobe;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2288,6 +2290,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase.MI_FancyVase=1
 /Game/Group_Assets/Aziz/Assets/Vases/Vase_low.Vase_low=1
 /Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven.MM_SheetMusicBeethoven=1
+/Game/Group_Assets/Aziz/Assets/SM_Bulb.SM_Bulb=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -3610,7 +3613,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
