--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -360,7 +360,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Chandelier
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1965,7 +1965,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -1993,26 +1993,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/SM_Bulb
-MRUItem1=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven
-MRUItem2=/Game/Living_Room
-MRUItem3=/Game/firstfloor
-MRUItem4=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst_Inst
-MRUItem5=/Game/Assets/Amy/Asset/wardrobe/cabinet_low_lambert1_OcclusionRoughnessMetallic
-MRUItem6=/Game/Assets/Amy/Asset/wardrobe/wardrobe
-MRUItem7=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
-MRUItem8=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
-MRUItem9=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem10=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
-MRUItem11=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem12=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
-MRUItem13=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
-MRUItem14=/Game/Attic
-MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
-MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
-MRUItem17=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
-MRUItem18=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
-MRUItem19=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Bookshelf/Bookshelf_low
+MRUItem1=/Game/Group_Assets/Aziz/Assets/SM_Bulb
+MRUItem2=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/firstfloor
+MRUItem5=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst_Inst
+MRUItem6=/Game/Assets/Amy/Asset/wardrobe/cabinet_low_lambert1_OcclusionRoughnessMetallic
+MRUItem7=/Game/Assets/Amy/Asset/wardrobe/wardrobe
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
+MRUItem9=/Game/Group_Assets/Aziz/Assets/Vases/MI_FancyVase
+MRUItem10=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem11=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots
+MRUItem12=/Game/Group_Assets/Aziz/Assets/Vases/SM_LargePots_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem13=/Game/Group_Assets/Aziz/Assets/Vases/MI_Vases
+MRUItem14=/Game/Group_Assets/Modular/Attic_Parts/Ceiling_Planks_Ceiling_Planks_02
+MRUItem15=/Game/Attic
+MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
+MRUItem17=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
+MRUItem18=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony_2
+MRUItem19=/Game/Neglect/M3/charassets/MAT_TRIMS_DoorMahogony
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2291,6 +2291,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Vases/Vase_low.Vase_low=1
 /Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven.MM_SheetMusicBeethoven=1
 /Game/Group_Assets/Aziz/Assets/SM_Bulb.SM_Bulb=1
+/Game/Group_Assets/Aziz/Assets/Bookshelf/Bookshelf_low.Bookshelf_low=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
