--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ DecalActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.Sce
 DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 SphereReflectionCapture=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
 SkyAtmosphere=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-SkyLight=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens
+SkyLight=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 sm_hanger_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
@@ -316,6 +316,7 @@ StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneou
 MeshNaniteSettings=
 SceneCapture2D=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 SpotLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
+LightComponentBase=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -452,7 +453,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 GeneralProjectSettings="\"Object\" "
@@ -720,6 +721,7 @@ SecondarySmoothBrushOpProps="\"Object\" "
 BaseSmoothBrushOpProps="\"Object\" "
 MeshEditingViewProperties="\"Object\" "
 MeshSpaceDeformerToolProperties="\"Object\" "
+LightComponentBase="\"Object\" "
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1340,6 +1342,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 None=======
 None=======
 None=======
@@ -1881,7 +1884,6 @@ MeshSpaceDeformerToolProperties.Options=True
 MeshSpaceDeformerToolProperties.Gizmo=True
 MeshSpaceDeformerToolActionPropertySet.Gizmo=True
 PostProcessVolume.Cooking=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1977,7 +1979,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2005,10 +2007,10 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Clock/MI_Clock
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Clock/MI_Clock
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low_DefaultMaterial_OcclusionRoughnessMetallic
 MRUItem4=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
 MRUItem5=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
 MRUItem6=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
@@ -2077,6 +2079,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low.Clock_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SM_Bulb.SM_Bulb;
 RecentlyPlaced=/Game/MSPresets/M_MS_Glass_Material/M_MS_Glass_Material.M_MS_Glass_Material;
@@ -2088,7 +2092,6 @@ RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst.MM_Picture
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst1.MM_Pictures_Inst1_Inst1;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1.MM_Pictures_Inst1;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst2.MM_Pictures_Inst2;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uiivbhniw/S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1.S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1;
 RecentlyPlaced=/Game/Group_Materials/Paintings/sm_picture1.sm_picture1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/S_Damaged_Picture_Frame_ukpidjpaw_lod3_Var1.S_Damaged_Picture_Frame_ukpidjpaw_lod3_Var1;
@@ -2096,7 +2099,6 @@ RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets_Door_Window_01_SM_Door_Frame_01_low.G_ModularAssets_Door_Window_01_SM_Door_Frame_01_low;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets_Door_Window_01_SM_Door_01_low.G_ModularAssets_Door_Window_01_SM_Door_01_low;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets_Door_Window_01_SM_Window_01_low.G_ModularAssets_Door_Window_01_SM_Window_01_low;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SM_WindowFrame.SM_WindowFrame;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
