--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -25,7 +25,6 @@ PreviewShaderPlatformName=None
 bPreviewFeatureLevelActive=False
 bPreviewFeatureLevelWasDefault=True
 PreviewDeviceProfileName=None
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.EditorStyleSettings]
 bColorVisionDeficiencyCorrection=False
@@ -166,7 +165,6 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 CurrentScalingGridSize=4
 GridEnabled=False
-RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -396,7 +394,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
