--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2166,6 +2166,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainPole.CurtainPole;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/DeerHead/Stag_head_001.Stag_head_001;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/SlouchedPillow.SlouchedPillow;
@@ -2185,10 +2186,6 @@ RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst_Inst.MM_Pi
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst.MM_Pictures_Inst1_Inst;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst1.MM_Pictures_Inst1_Inst1;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1.MM_Pictures_Inst1;
-RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst2.MM_Pictures_Inst2;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Picture_Frame_uiivbhniw/S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1.S_Wooden_Picture_Frame_uiivbhniw_lod3_Var1;
-RecentlyPlaced=/Game/Group_Materials/Paintings/sm_picture1.sm_picture1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/S_Damaged_Picture_Frame_ukpidjpaw_lod3_Var1.S_Damaged_Picture_Frame_ukpidjpaw_lod3_Var1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
