--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -413,7 +413,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Plaque
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2059,7 +2059,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -2576,7 +2576,7 @@ PrimType=1
 ScreenPosition=X=131.200 Y=0.000
 ScreenPosition=X=186.667 Y=122.667
 ScreenPosition=X=-7.000 Y=8.000
-ScreenPosition=X=95.200 Y=15.200
+ScreenPosition=X=95.000 Y=15.000
 None=======
 None=======
 None=======
@@ -2616,7 +2616,7 @@ WindowSize=X=1337.000 Y=777.000
 WindowSize=X=1339.000 Y=779.000
 WindowSize=X=1340.000 Y=780.000
 InitiallyMaximized=True
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
