--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -381,7 +381,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Clock
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Tashan/consoletable
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 None=======
 None=======
 None=======
@@ -425,7 +425,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2165,7 +2165,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -2297,18 +2297,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/mat_lamp_Inst.mat_lamp_Ins
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low.Clock_low;
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SM_Bulb.SM_Bulb;
-RecentlyPlaced=/Game/MSPresets/M_MS_Glass_Material/M_MS_Glass_Material.M_MS_Glass_Material;
-RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/Glass.Glass;
-RecentlyPlaced=/Game/Group_Materials/Glass/Glass_Inst.Glass_Inst;
-RecentlyPlaced=/Game/MSPresets/M_MS_Glass_Material/Textures/Black.Black;
-RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst_Inst.MM_Pictures_Inst1_Inst_Inst;
-RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst.MM_Pictures_Inst1_Inst;
-RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst1.MM_Pictures_Inst1_Inst1;
-RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1.MM_Pictures_Inst1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2721,7 +2709,7 @@ ScreenPosition=X=131.200 Y=0.000
 ScreenPosition=X=186.667 Y=122.667
 ScreenPosition=X=-7.000 Y=8.000
 ScreenPosition=X=95.000 Y=15.000
-ScreenPosition=X=195.200 Y=2.400
+ScreenPosition=X=195.000 Y=2.000
 None=======
 None=======
 None=======
@@ -2762,7 +2750,7 @@ WindowSize=X=1336.000 Y=776.000
 WindowSize=X=1337.000 Y=777.000
 WindowSize=X=1339.000 Y=779.000
 WindowSize=X=1340.000 Y=780.000
-WindowSize=X=1344.800 Y=784.800
+WindowSize=X=1345.000 Y=785.000
 InitiallyMaximized=True
 InitiallyMaximized=True
 
@@ -2780,11 +2768,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content
+UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall 5.2/Content
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
-GenericImport=C:/Users/demaz/Downloads/Stag_head_001.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/CurtainPole/CurtainPole.fbx
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
@@ -3854,8 +3842,8 @@ DistCurveEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -3889,7 +3877,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
