--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2166,7 +2166,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -2278,6 +2278,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainPole.CurtainPole;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/mat_trim.mat_trim;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -2296,7 +2297,6 @@ RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/DeerHead/Stag_head_001.Stag_head_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/SlouchedPillow.SlouchedPillow;
 RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/mat_lamp_Inst.mat_lamp_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low.Clock_low;
 
 [AssetEditorToolkitTabLocation]
