Final Push of Tonight

--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,6 +173,7 @@ SnapScaleEnabled=False
 CurrentRotGridSize=6
 CurrentScalingGridSize=4
 GridEnabled=False
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -241,13 +242,13 @@ sm_Mannequin_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube
 Actor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 DecalActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 SphereReflectionCapture=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
 SphereReflectionCapture=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 SkyAtmosphere=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 SkyAtmosphere=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 SkyLight=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
-SkyLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+SkyLight=PostProcessVolume.Lens.Lens
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 sm_hanger_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_HoloLens,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
@@ -804,7 +805,7 @@ ParticleModuleVelocityBase="\"Object\" \"Object.Velocity.StartVelocity\" \"Objec
 ParticleModuleSize="\"Object\" \"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleSizeBase="\"Object\" \"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ExponentialHeightFog="\"Object.ExponentialHeightFog.Component.Object.InscatteringTextureTint\" "
-Info=
+Info="\"Object.Light.LightComponent.Object.Light.LowerHemisphereColor\" \"Object.Light.LightComponent.Object.Light.LightColor\" \"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
 CreateMeshObjectTypeProperties="\"Object\" "
 ProceduralBoxToolProperties="\"Object\" "
 ProceduralShapeToolProperties="\"Object\" "
@@ -814,6 +815,7 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 SpotLightComponent="\"Object\" "
 PointLightComponent="\"Object\" "
 bp_stainedglasslight_C="\"Object\" "
+SkyLight="\"Object.Light.LightComponent.Object.Light.LowerHemisphereColor\" \"Object.Light.LightComponent.Object.Light.LightColor\" \"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -2167,7 +2169,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -2279,6 +2281,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainLightBlock.CurtainLightBlock;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainPole.CurtainPole;
@@ -2294,7 +2297,6 @@ RecentlyPlaced=/Game/Group_Assets/PLANTS/leaves_sm_leaf02.leaves_sm_leaf02;
 RecentlyPlaced=/Game/Group_Assets/PLANTS/leaves_sm_leaf03.leaves_sm_leaf03;
 RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/glassbowl.glassbowl;
 RecentlyPlaced=/Game/Assets/Amy/Asset/jewellery_box/JB_low.JB_low;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/DeerHead/Stag_head_001.Stag_head_001;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/SlouchedPillow.SlouchedPillow;
 RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/mat_lamp_Inst.mat_lamp_Inst;
